--- a/skillkernel.html
+++ b/skillkernel.html
@@ -612,6 +612,53 @@
             justify-content: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+        .explore-buttons {
+            display:flex;
+            margin-right:25rem 0;
+            top: 20px;
+            right: 20px;
+        }
+
+        .explore1-btn {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 1px solid ;
+            color: #FF6B4A;
+            background:rgb(218, 195, 190);
+            margin-left: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .explore2-btn {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 1px solid ;
+            color: #FF6B4A;
+            background:rgb(218, 195, 190);
+            margin-left: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .explore3-btn {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            border: 1px solid ;
+            color: #FF6B4A;
+            background:rgb(218, 195, 190);
+            margin-left: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
 
         .profile-image {
             width: 120px;
@@ -970,12 +1017,12 @@
         <div class="container py-4 py-lg-5">
             <!-- Short Courses Section -->
             <div class="row g-4 mb-5">
+                <div class="explore-buttons">
+                    <button class="explore2-btn"><i class="fas fa-chevron-left"></i></button>
+                    <button class="explore2-btn"><i class="fas fa-chevron-right"></i></button>
+                </div>
                 <!-- Explore Card -->
                 <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="testnav-buttons">
-                        <button class="testnav-btn"><i class="fas fa-chevron-left"></i></button>
-                        <button class="testnav-btn"><i class="fas fa-chevron-right"></i></button>
-                    </div>
                     <div class="card h-100 bg-warning">
                         <div class="card-body d-flex flex-column p-4">
                             <h2 class="card-title h3 fw-bold">Explore shorts courses</h2>
@@ -1043,11 +1090,11 @@
         
             <!-- Degree Courses Section -->
             <div class="row g-4 mb-5">
+                <div class="explore-buttons">
+                    <button class="explore2-btn"><i class="fas fa-chevron-left"></i></button>
+                    <button class="explore2-btn"><i class="fas fa-chevron-right"></i></button>
+                </div>
                 <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="testnav-buttons">
-                        <button class="testnav-btn"><i class="fas fa-chevron-left"></i></button>
-                        <button class="testnav-btn"><i class="fas fa-chevron-right"></i></button>
-                    </div>
                     <div class="card h-100 bg-primary text-white">
                         <div class="card-body d-flex flex-column p-4">
                             <h2 class="card-title h3 fw-bold">Explore Degree courses</h2>
@@ -1115,11 +1162,11 @@
         
             <!-- Diploma Courses Section -->
             <div class="row g-4">
+                <div class="explore-buttons">
+                    <button class="explore3-btn"><i class="fas fa-chevron-left"></i></button>
+                    <button class="explore3-btn"><i class="fas fa-chevron-right"></i></button>
+                </div>
                 <div class="col-12 col-sm-6 col-lg-3">
-                    <div class="testnav-buttons">
-                        <button class="testnav-btn"><i class="fas fa-chevron-left"></i></button>
-                        <button class="testnav-btn"><i class="fas fa-chevron-right"></i></button>
-                    </div>
                     <div class="card h-100 bg-danger text-white">
                         <div class="card-body d-flex flex-column p-4">
                             <h2 class="card-title h3 fw-bold">Explore Diploma courses</h2>
@@ -1128,7 +1175,7 @@
                         </div>
                     </div>
                 </div>
-                                 <!-- Course Cards -->
+                <!-- Course Cards -->
                 <div class="col-12 col-sm-6 col-lg-3">
                     <div class="card h-100 shadow-sm">
                         <img src="path-to-image1.jpg" class="card-img-top" alt="Course Image">
